# housing-price-ml-service

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml  model_config.yaml
notebooks/: feature_and_model_selection_analysis.ipynb  stakeholder_project_review.ipynb  usa_housing_eda.ipynb
src/: __init__.py  configuration.py  data_ingestion.py  data_split.py  data_transformation.py  data_validation.py  exceptions.py  model_evaluation.py  model_inference.py  model_training.py
test/: test_data_ingestion.py  test_data_split.py  test_data_transformation.py  test_data_validation.py  test_main.py  test_model_evaluation.py  test_model_inference.py  test_model_training.py
